Refactorings and output fixes